--- a/Dev Reviewer.ipynb
+++ b/Dev Reviewer.ipynb
@@ -325,17 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b18f0342",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Dev_Reviewer.pkl...\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -439,13 +432,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                purity  rating  description class  extra_description  \\\n",
-       "sample_id                                                              \n",
-       "000725_ZS_2668     NaN     NaN          NaN   NaN                NaN   \n",
-       "005982_GD_1875     NaN     NaN          NaN   NaN                NaN   \n",
-       "012413_AT_1634     NaN     NaN          NaN   NaN                NaN   \n",
-       "016198_VX_1736     NaN     NaN          NaN   NaN                NaN   \n",
-       "022613_PU_3426     NaN     NaN          NaN   NaN                NaN   \n",
+       "               purity rating description class  extra_description  \\\n",
+       "sample_id                                                           \n",
+       "000725_ZS_2668    NaN    NaN         NaN   NaN                NaN   \n",
+       "005982_GD_1875    NaN    NaN         NaN   NaN                NaN   \n",
+       "012413_AT_1634    NaN    NaN         NaN   NaN                NaN   \n",
+       "016198_VX_1736    NaN    NaN         NaN   NaN                NaN   \n",
+       "022613_PU_3426    NaN    NaN         NaN   NaN                NaN   \n",
        "\n",
        "                another_annot flags dropdown  \n",
        "sample_id                                     \n",
@@ -456,7 +449,7 @@
        "022613_PU_3426            NaN   NaN      NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "970df1a6-8847-4306-b2cc-7c0fbab20a3f",
    "metadata": {},
    "outputs": [
@@ -509,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "54ee7bc6-4f2c-43e0-847a-d4b733cba9cc",
    "metadata": {},
    "outputs": [
@@ -542,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e65c5b25",
    "metadata": {},
    "outputs": [],
@@ -563,15 +556,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "cf02d7e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_app = ReviewDataApp()\n",
     "\n",
-    "test_app.add_table_from_path(table_name='DFCI MAF file', \n",
-    "                             component_name='maf-component-id', \n",
+    "test_app.add_table_from_path(table_title='DFCI MAF file', \n",
+    "                             component_id='maf-component-id', \n",
     "                             table_fn_col='DFCI_bucket_sample_dfci_maf_fn', \n",
     "                             table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
     "\n",
@@ -594,17 +587,18 @@
     "                             'BETA_purity_upper']\n",
     "                      )\n",
     "\n",
-    "def plot_interactive_graph(df: pd.DataFrame, idx: str, slider_value, test_param):\n",
+    "def plot_interactive_graph(df: pd.DataFrame, idx: str, slider_value, switch, switch2, test_param):\n",
     "    x = np.arange(0, 1, 0.1)\n",
     "    fig = go.Figure()\n",
     "    fig.add_trace(go.Scatter(x=x, y=x))\n",
     "    print(f'plot_interactive_graph: {test_param}')\n",
     "    return [fig, 0.5]\n",
     "\n",
-    "def interactive_graph_change_lines(df: pd.DataFrame, idx:str, slider_value, test_param):\n",
-    "    fig = plot_interactive_graph(df, idx, slider_value, test_param)[0] # cache?\n",
+    "def interactive_graph_change_lines(df: pd.DataFrame, idx:str, slider_value, switch, switch2, test_param):\n",
+    "    fig = plot_interactive_graph(df, idx, slider_value, switch, switch2, test_param)[0] # cache?\n",
     "    fig.add_vline(slider_value)\n",
     "    print(f'interactive_graph_change_lines: {test_param}')\n",
+    "    print(f'Both Switches?: {switch and switch2}')\n",
     "    return [fig, dash.no_update] # or just return the original file\n",
     "    \n",
     "\n",
@@ -612,22 +606,38 @@
     "                                      html.Div(children=[dcc.Graph(figure={}, id='a-figure'), \n",
     "                                                dcc.Slider(0, 1, 0.1, value=0.5, \n",
     "                                                           id='a-slider'\n",
-    "                                                          )\n",
+    "                                                          ),\n",
+    "                                                dbc.Switch(\n",
+    "                                                        id=\"standalone-switch\",\n",
+    "                                                        label=\"This is a toggle switch\",\n",
+    "                                                        value=False,\n",
+    "                                                    )\n",
     "                                               ]),\n",
     "                                      new_data_callback=plot_interactive_graph,\n",
     "                                      internal_callback=interactive_graph_change_lines,\n",
     "                                      callback_output=[Output('a-figure', 'figure'), Output('a-slider', 'value')],\n",
     "                                      callback_input=[Input('a-slider', 'value')],\n",
+    "                                      callback_state=[State('standalone-switch', 'value')],\n",
+    "                                      callback_state_external=[State('standalone-switch2', 'value')],\n",
     "                                      callback_states_for_autofill=[State('a-slider', 'value')]\n",
     "                                   ),\n",
     "                       test_param='test **kwargs'\n",
     "                       )\n",
+    "\n",
+    "\n",
+    "test_app.add_component(AppComponent('test-external-state-component',\n",
+    "                                    html.Div(children=[dbc.Switch(\n",
+    "                                                        id=\"standalone-switch2\",\n",
+    "                                                        label=\"This is another toggle switch\",\n",
+    "                                                        value=False)\n",
+    "                                                      ]),\n",
+    "                                   ))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "d72379e6",
    "metadata": {
     "tags": []
@@ -640,8 +650,14 @@
       "Dash app running on http://0.0.0.0:8063/\n",
       "plot_interactive_graph: test **kwargs\n",
       "plot_interactive_graph: test **kwargs\n",
+      "interactive_graph_change_lines: test **kwargs\n",
+      "Both Switches?: False\n",
       "plot_interactive_graph: test **kwargs\n",
-      "interactive_graph_change_lines: test **kwargs\n"
+      "interactive_graph_change_lines: test **kwargs\n",
+      "Both Switches?: False\n",
+      "plot_interactive_graph: test **kwargs\n",
+      "interactive_graph_change_lines: test **kwargs\n",
+      "Both Switches?: True\n"
      ]
     }
    ],
@@ -649,6 +665,33 @@
     "test_app.run(test_rd, mode='external', port=8063, \n",
     "             autofill_dict={'test-interactive-graph': {'purity': State('a-slider', 'value'), \n",
     "                                                       'class': 'Option 1'}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "40a328cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DFCI MAF file': [],\n",
+       " 'sample-info-component': [],\n",
+       " 'test-interactive-graph': [<Input `a-slider.value`>,\n",
+       "  <State `standalone-switch.value`>]}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{c.name: c.callback_input +\n",
+    "         c.callback_state +\n",
+    "         c.callback_state_external for c_name, c in\n",
+    " test_app.more_components.items()}"
    ]
   },
   {
@@ -861,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "fc92b826-c95c-4b16-b41b-76d218c8ca86",
    "metadata": {},
    "outputs": [],
@@ -913,18 +956,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d3480c22-e8e9-4029-8600-3059ded27b80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_reviewer.ReviewerTemplate import ReviewerTemplate\n",
-    "from jupyter_reviewer.ReviewDataApp import AppComponent"
+    "from JupyterReviewer.ReviewerTemplate import ReviewerTemplate\n",
+    "from JupyterReviewer.ReviewDataApp import AppComponent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "d13a679c-0056-433b-ae20-8da195f2eea5",
    "metadata": {},
    "outputs": [],
@@ -934,28 +977,31 @@
     "    return x < 0.5\n",
     "class PrebuiltReviewer(ReviewerTemplate):\n",
     "    def gen_review_data(self,\n",
-    "                        review_data_fn: str, \n",
-    "                        description: str='', \n",
-    "                        df: pd.DataFrame = pd.DataFrame(), \n",
-    "                        review_data_annotation_list: [ReviewDataAnnotation] = [], \n",
-    "                        reuse_existing_review_data_fn: str = None,\n",
+    "                        review_data_fn, \n",
+    "                        description, \n",
+    "                        sample_df, \n",
+    "                        reuse_existing_review_data_fn,\n",
+    "                        participant_df\n",
     "                       ):\n",
     "        \n",
-    "        df['new_column'] = 'preprocessing'\n",
+    "        sample_df['new_column'] = 'preprocessing'\n",
     "\n",
     "        return  ReviewData(review_data_fn=review_data_fn,\n",
     "                           description=description,\n",
-    "                           df=df,\n",
-    "                           review_data_annotation_list = [ReviewDataAnnotation('purity', 'number', validate_input=validate_purity),\n",
-    "                                                          ReviewDataAnnotation('rating', 'number', options=range(10)),\n",
-    "                                                          ReviewDataAnnotation('description', 'text'),\n",
-    "                                                          ReviewDataAnnotation('class', 'radioitem', options=[f'Option {n}' for n in range(4)]),\n",
-    "                                                          ])\n",
+    "                           df=sample_df,\n",
+    "                           df_supp_dict={'participant': participant_df}\n",
+    "                          )\n",
+    "    \n",
+    "    def gen_review_data_annotations(self):\n",
+    "        self.add_review_data_annotation('purity', ReviewDataAnnotation('float', validate_input=validate_purity))\n",
+    "        self.add_review_data_annotation('rating', ReviewDataAnnotation('int', options=range(10)))\n",
+    "        self.add_review_data_annotation('description', ReviewDataAnnotation('string'))\n",
+    "        self.add_review_data_annotation('class', ReviewDataAnnotation('multi', options=[f'Option {n}' for n in range(4)]))\n",
     "    \n",
     "    def gen_review_app(self, test_param) -> ReviewDataApp:\n",
     "        app = ReviewDataApp()\n",
-    "        app.add_table_from_path(table_name='DFCI MAF file', \n",
-    "                                component_name='maf-component-id', \n",
+    "        app.add_table_from_path(table_title='DFCI MAF file', \n",
+    "                                component_id='maf-component-id', \n",
     "                                table_fn_col='DFCI_bucket_sample_dfci_maf_fn', \n",
     "                                table_cols=['Hugo_Symbol', 'Chromosome', 't_alt_count', 't_ref_count', 'Tumor_Sample_Barcode'])\n",
     "\n",
@@ -1009,16 +1055,22 @@
     "        \n",
     "        return app\n",
     "    \n",
+    "    def gen_review_data_annotations_app_display(self):\n",
+    "        self.add_review_data_annotations_app_display('purity', 'number')\n",
+    "        self.add_review_data_annotations_app_display('rating', 'number')\n",
+    "        self.add_review_data_annotations_app_display('description', 'text')\n",
+    "        self.add_review_data_annotations_app_display('class', 'radioitem')\n",
+    "    \n",
     "    def gen_autofill(self):\n",
-    "        self.add_autofill('test-interactive-graph', {'purity': State('a-slider', 'value'), \n",
-    "                                                     'class': 'Option 1'})\n",
+    "        self.add_autofill('test-interactive-graph', State('a-slider', 'value'), 'purity')\n",
+    "        self.add_autofill('test-interactive-graph', 'Option 1', 'class')\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "ec41ee97-8740-4c06-adf6-fa86e86bc868",
    "metadata": {},
    "outputs": [
@@ -1028,28 +1080,6 @@
      "text": [
       "Loading existing review session /Users/cchu/Desktop/Methods/JupyterReviewer/data/Prebuilt_reviewer.Dev_Reviewer.pkl...\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/JupyterReviewer/jupyter_reviewer/ReviewData.py:178: UserWarning:\n",
-      "\n",
-      "Following annotation names already exist: ['another_annotation']\n",
-      "Only [] will be added.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "plot_interactive_graph: testing param kwargs\n",
-      "interactive_graph_change_lines: testing param kwargs\n",
-      "plot_interactive_graph: testing param kwargs\n",
-      "plot_interactive_graph: testing param kwargs\n",
-      "interactive_graph_change_lines: testing param kwargs\n"
-     ]
     }
    ],
    "source": [
@@ -1057,22 +1087,30 @@
     "test_reviewer.set_review_data(review_data_fn = '/Users/cchu/Desktop/Methods/JupyterReviewer/data/Prebuilt_reviewer.Dev_Reviewer.pkl', \n",
     "                                description='testing', \n",
     "                                df = cchu_purities_df, # optional if directory above already exists. \n",
-    "                                 review_data_annotation_list = [ReviewDataAnnotation('purity', 'number', validate_input=validate_purity),\n",
-    "                                                                ReviewDataAnnotation('rating', 'number', options=range(10)),\n",
-    "                                                                ReviewDataAnnotation('description', 'text'),\n",
-    "                                                                ReviewDataAnnotation('class', 'radioitem', options=[f'Option {n}' for n in range(4)]),\n",
-    "                                                                ]\n",
     "                             )\n",
+    "test_reviewer.set_review_data_annotations()\n",
+    "test_reviewer.set_review_data_annotations_app_display()\n",
     "test_reviewer.set_review_app(test_param='testing param kwargs')\n",
+    "test_reviewer.set_autofill()\n",
     "\n",
     "# User customization\n",
     "test_reviewer.app.add_component(AppComponent('test-add-component', html.Div(html.H1('New component'))))\n",
-    "test_reviewer.review_data.add_annotation(ReviewDataAnnotation('another_annotation', 'number'))"
+    "# test_reviewer.review_data.add_annotation(ReviewDataAnnotation('another_annotation', 'number'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
+   "id": "f27a0026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_reviewer.review_data.review_data_annotation_dict['purity'].options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "136ecf02-2eab-47c9-8a7b-cb5a7e992f3c",
    "metadata": {},
    "outputs": [
@@ -1080,12 +1118,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://0.0.0.0:8050/\n"
+      "Dash app running on http://0.0.0.0:8051/\n",
+      "plot_interactive_graph: testing param kwargs\n",
+      "plot_interactive_graph: testing param kwargs\n",
+      "interactive_graph_change_lines: testing param kwargs\n",
+      "plot_interactive_graph: testing param kwargs\n",
+      "interactive_graph_change_lines: testing param kwargs\n"
      ]
     }
    ],
    "source": [
-    "test_reviewer.run()\n"
+    "test_reviewer.run(port=8051)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1121,7 +1166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1135,7 +1180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
