implement data collection function

--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -27,6 +27,7 @@
    "outputs": [],
    "source": [
     "from JupyterReviewer.Reviewers.PatientReviewer import PatientReviewer\n",
+    "from JupyterReviewer.Reviewers.PatientReviewer import collect_data\n",
     "from JupyterReviewer.ReviewData import ReviewDataAnnotation\n",
     "from JupyterReviewer.ReviewDataApp import AppComponent\n",
     "\n",
@@ -43,8 +44,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abbbf85c",
+   "metadata": {},
+   "source": [
+    "### Generate a participant and a sample file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "6f8ecc8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_data(\n",
+    "    # Enter the name of your workspace \n",
+    "    workspace='broad-getzlab-ibm-prans-t/Parsons_Breast_MASTER-PrAn-final',\n",
+    "    # Enter the path to your treatments file downloaded from the portal\n",
+    "    treatments_fn='~/Broad/JupyterReviewer/example_notebooks/example_data/treatments.tsv',\n",
+    "    # Enter the path where your treatment files split up by participant will be stored\n",
+    "    treatment_files_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/treatments',\n",
+    "    # Enter the path where your maf files for each participant will be stored\n",
+    "    participant_maf_files_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/patient_mafs',\n",
+    "    # Enter the path where your completed participant file will be stored \n",
+    "    participant_file_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/',\n",
+    "    # Enter the path where your completed sample file will be stored \n",
+    "    samples_file_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792d960c",
+   "metadata": {},
+   "source": [
+    "### Create patient reviewer object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -65,12 +105,12 @@
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/updated_test_data_for_reviewer.csv').set_index('participant_id'),\n",
+    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/participant.txt', sep='\\t').set_index('participant_id'),\n",
     "    preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data',\n",
-    "    samples_fn='/Users/svanseters/Broad/JupyterReviewer/samples.csv'\n",
+    "    samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.txt'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.csv', preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data', drivers_fn='drivers.csv')\n",
+    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.txt', preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data', drivers_fn='drivers.csv')\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -85,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "119080a6",
    "metadata": {},
    "outputs": [],
@@ -113,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "df4ef73d",
    "metadata": {},
    "outputs": [],
