fix data collection sample file and add clinical data to patient file

--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbbf85c",
+   "id": "75bd47db",
    "metadata": {},
    "source": [
     "### Generate a participant and a sample file"
@@ -53,30 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f8ecc8d",
+   "execution_count": 14,
+   "id": "b9ce8e67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_data(\n",
+    "samples_df, participants_df = collect_data(\n",
     "    # Enter the name of your workspace \n",
     "    workspace='broad-getzlab-ibm-prans-t/Parsons_Breast_MASTER-PrAn-final',\n",
     "    # Enter the path to your treatments file downloaded from the portal\n",
-    "    treatments_fn='~/Broad/JupyterReviewer/example_notebooks/example_data/treatments.tsv',\n",
-    "    # Enter the path where your treatment files split up by participant will be stored\n",
-    "    treatment_files_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/treatments',\n",
-    "    # Enter the path where your maf files for each participant will be stored\n",
-    "    participant_maf_files_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/patient_mafs',\n",
-    "    # Enter the path where your completed participant file will be stored \n",
-    "    participant_file_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/',\n",
-    "    # Enter the path where your completed sample file will be stored \n",
-    "    samples_file_path='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/'\n",
+    "    treatments_fn='../../example_notebooks/example_data/treatments.tsv',\n",
+    "    # Enter the path to your participants file downloaded from the portal\n",
+    "    participants_fn = '../../example_notebooks/example_data/clinical_data.txt',\n",
+    "    # Enter the path where your final data files will be stored\n",
+    "    data_path='../../example_notebooks/example_data/',\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "792d960c",
+   "id": "b1ee277e",
    "metadata": {},
    "source": [
     "### Create patient reviewer object"
@@ -84,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -92,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session /Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl...\n"
+      "cnv figs directory already exists: /Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/preprocess_data/cnv_fig\n"
      ]
     }
    ],
@@ -105,8 +101,8 @@
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/participant.txt', sep='\\t').set_index('participant_id'),\n",
-    "    preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data',\n",
+    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/participants.txt', sep='\\t').set_index('participant_id'),\n",
+    "    preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/preprocess_data',\n",
     "    samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.txt'\n",
     ")\n",
     "\n",
@@ -189,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -198,56 +194,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8086/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
-      "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:271: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:272: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:291: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:296: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/AppComponents/CNVPlotComponent.py:298: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
      ]
     }
    ],
